--- a/posts/blog/frontend-in-startup-chosen-things.mdx
+++ b/posts/blog/frontend-in-startup-chosen-things.mdx
@@ -189,6 +189,11 @@ switch (RNConfig.env) {
 
 ![storybook](/posts/frontend-in-startup-chosen-things/storybook.gif)
 
+사담) 공용 컴포넌트를 작성하는 데도 사소한 부분 하나하나 신경써야해서 굉장히 어려웠습니다. 물론 지금도 여전히 어렵구요!  
+디자인 시스템을 만드는 분들의 이야기가 궁금해지기 시작했습니다.
+
+![components-thinking](/posts/frontend-in-startup-chosen-things/components-thinking.png)
+
 ### 🔖 파일 이름 규칙
 
 파일 이름 규칙이 아마 제일 고민되었던 부분이 아닐까 싶습니다.
