--- a/posts/blog/frontend-in-startup-chosen-things.mdx
+++ b/posts/blog/frontend-in-startup-chosen-things.mdx
@@ -46,6 +46,9 @@ DB 설계만 한다면 api, oauth, 로그인 등의 필요한 기능들은 `supa
 물론, 여기까지만 읽으시면 걱정될 게 한두 개가 아니겠지만 깊게 얘기하진 못해도 저도 한 때 백엔드를 운영한 경험이 있으며,  
 DB 설계 부분과 같은 중요한 파트는 친한 백엔드 개발자분께 (정당한 보수와 함께) 도움을 받을 계획이라 큰 문제 없이 진행되고 있습니다.
 
+> But! 3년차 이상인 백엔드 개발자 분들의 지원을 기다립니다.  
+> 혹시 관심이 있으시다면 `miryang.dev@gmail.com` 으로 연락 부탁 드립니다.
+
 ### 📖 언어
 
 > TypeScript
