맞춤법 맞추기

--- a/posts/blog/frontend-in-startup-chosen-things.mdx
+++ b/posts/blog/frontend-in-startup-chosen-things.mdx
@@ -25,9 +25,9 @@ Github 세팅부터 브랜치 전략 등 협업을 위한 것들을 세팅하는
 
 ## ✍🏻 Things
 
-처음 세팅을 하다보니 욕심이 생겨 도전적인 도구들을 선택하는 것도 고려를 해보았습니다만  
+처음 세팅을 하다 보니 욕심이 생겨 도전적인 도구들을 선택하는 것도 고려를 해보았습니다만  
 이전 직장 동료분이 인적자원이 풍족하지 않을 때는
-개발 측면이나 유지보수 측면에서 쉽개 대응할 수 있는 도구를 선택하는 것이 좋다는 조언을 해주셔서
+개발 측면이나 유지 보수 측면에서 쉽게 대응할 수 있는 도구를 선택하는 것이 좋다는 조언을 해주셔서
 범용적으로 사용하는 도구들을 최대한 사용하기로 했습니다.
 
 ### 🌘 백엔드
@@ -43,7 +43,7 @@ DB 설계만 한다면 api, oauth, 로그인 등의 필요한 기능들은 `supa
   - 각 프로젝트에 대해 전체 Postgres 데이터베이스, 실시간 기능, 데이터베이스 백업, 확장 등을 제공합니다
   - 이메일 및 OAuth 로그인을 프로젝트에 추가하고 관리할 수 있습니다
 
-물론, 여기까지만 읽으시면 걱정될 게 한두 개가 아니겠지만 깊게 얘기하진 못해도 저도 한 때 백엔드를 운영한 경험이 있으며,  
+물론, 여기까지만 읽으시면 걱정될 게 한두 개가 아니겠지만 깊게 얘기하진 못해도 저도 한때 백엔드를 운영한 경험이 있으며,  
 DB 설계 부분과 같은 중요한 파트는 친한 백엔드 개발자분께 (정당한 보수와 함께) 도움을 받을 계획이라 큰 문제 없이 진행되고 있습니다.
 
 > But! 3년차 이상인 백엔드 개발자 분들의 지원을 기다립니다.  
@@ -53,7 +53,7 @@ DB 설계 부분과 같은 중요한 파트는 친한 백엔드 개발자분께 
 
 > TypeScript
 
-코드리뷰 없이 빠르게 기능을 만들어 내야하는 상황이 많은 초기 스타트업 특성상 **타입 안정성**을 챙기는 건 당연한 일이라고 생각합니다.  
+코드리뷰 없이 빠르게 기능을 만들어 내야 하는 상황이 많은 초기 스타트업 특성상 **타입 안정성**을 챙기는 건 당연한 일이라고 생각합니다.  
 `ReScript` 도 고민을 했으나 러닝 커브가 낮은 `TypeScript`를 채택했습니다.  
 물론 필요한 부분엔 부분적으로 `ReScript`을 도입하고자 합니다.
 
@@ -80,8 +80,8 @@ DB 설계 부분과 같은 중요한 파트는 친한 백엔드 개발자분께 
 
 웹 프레임워크는 `Next.js` 을 선택했습니다. 현재 기준 13버전입니다.
 
-Nextjs를 선택한 이유는 독스가 잘 되어 있고, 자료가 풍부해 구글링에 용이해서 그리고 SEO를 하기 위해서 입니다.  
-비교적 정보가 부족한 13 버전 그리고 `app router`를 채택한 건 최대한 최신 버전을 사용해 레거시를 덜 쌓기 위해서 입니다.
+Nextjs를 선택한 이유는 독스가 잘 되어 있고, 자료가 풍부해 구글링에 용이해서 그리고 SEO를 하기 위해서입니다.  
+비교적 정보가 부족한 13 버전 그리고 `app router`를 채택한 건 최대한 최신 버전을 사용해 레거시를 덜 쌓기 위해서입니다.
 
 ### 🍐 웹 배포
 
@@ -104,7 +104,7 @@ Vercel은 Organizition로 사용할 경우 무조건 Team 요금제를 사용해
 클라이언트 에러 트래킹은 Sentry를 채택하고, 슬랙으로 알람을 연동하여 사용하고 있습니다.
 
 지금은 에러가 발생하면 알림을 보내도록만 해두었는데 센트리를 어떻게 해야 잘 사용하는 건지 궁금해서 좋은 아티클을 찾고 있습니다.
-혹시 알고 계시다면 소개부탁드립니다.
+혹시 알고 계시다면 소개 부탁드립니다.
 
 - **bing ai에게 물어봤다. Sentry란?**
   - Sentry는 어플리케이션에서 오류가 발생하면 알려주는 에러 트래킹 서비스입니다
@@ -117,7 +117,7 @@ Vercel은 Organizition로 사용할 경우 무조건 Team 요금제를 사용해
 > React Native, WebView, CodePush
 
 개발자가 부족하므로 앱 개발을 할 리소스가 없고 수정 사항을 실시간으로 바로 반영하기 위해서 웹뷰를 사용하기로 했습니다.  
-그리고 제가 사용해본 React Native를 채택했습니다.
+그리고 제가 사용해 본 React Native를 채택했습니다.
 
 웹과 앱이 통신할 때의 프로토콜은 Type으로 최대한 안전하게 명시해두고 사용하고 있습니다.
 
@@ -159,7 +159,7 @@ export function requestApp({ event, fallback }: RequestProps) {
 
 스토어 배포보다는 QA를 위해 App Center를 채택했습니다.
 
-브랜치 별로 빌드를 돌릴 수 있고, scheme을 분리해 각 scheme별로 빌드를 돌리거나, env 값을 수정해 웹뷰 엔드포인트를 변경하여 빌드를 하는 등 여러 상황에 유연하게 대응할 수 있습니다.
+브랜치 별로 빌드를 돌릴 수 있고, scheme을 분리해 각 scheme 별로 빌드를 돌리거나, env 값을 수정해 웹뷰 엔드포인트를 변경하여 빌드를 하는 등 여러 상황에 유연하게 대응할 수 있습니다.
 
 추가로 더 궁금하신 분들은 [React Native 안드로이드 빌드 환경 개선하기](https://miryang.dev/blog/rn-android-improve-dev) 이 글을 참고해 주세요.
 
@@ -192,7 +192,7 @@ switch (RNConfig.env) {
 
 ![storybook](/posts/frontend-in-startup-chosen-things/storybook.gif)
 
-사담) 공용 컴포넌트를 작성하는 데도 사소한 부분 하나하나 신경써야해서 굉장히 어려웠습니다. 물론 지금도 여전히 어렵구요!  
+여담) 공용 컴포넌트를 작성하는 데도 사소한 부분 하나하나 신경 써야 해서 굉장히 어려웠습니다. 물론 지금도 여전히 어렵고요!  
 디자인 시스템을 만드는 분들의 이야기가 궁금해지기 시작했습니다.
 
 ![components-thinking](/posts/frontend-in-startup-chosen-things/components-thinking.png)
