--- a/posts/blog/frontend-in-startup-chosen-things.mdx
+++ b/posts/blog/frontend-in-startup-chosen-things.mdx
@@ -190,7 +190,7 @@ switch (RNConfig.env) {
 
 모두가 공용 컴포넌트를 보다 쉽게 사용하게 하기 위해 스토리북으로 variant들을 조합하고, 사용 예시를 볼 수 있도록 했습니다.
 
-![storybook](/posts/frontend-in-startup-chosen-things/storybook.gif)
+![storybook-button](/posts/frontend-in-startup-chosen-things/storybook-button.gif)
 
 여담) 공용 컴포넌트를 작성하는 데도 사소한 부분 하나하나 신경 써야 해서 굉장히 어려웠습니다. 물론 지금도 여전히 어렵고요!  
 디자인 시스템을 만드는 분들의 이야기가 궁금해지기 시작했습니다.
