게스트북 속도 개선

--- a/posts/note/react-native/codepush-android.mdx
+++ b/posts/note/react-native/codepush-android.mdx
@@ -20,7 +20,7 @@ project(':react-native-code-push').projectDir = new File(rootProject.projectDir,
 apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 ```
 
-```MainApplication.java
+```java:MainApplication.java
 import com.microsoft.codepush.react.CodePush;
 ...
 
@@ -49,6 +49,7 @@ productFlavors {
     }
 }
 ```
+
 ---
 
 refer : https://learn.microsoft.com/en-us/appcenter/distribution/codepush/rn-get-started#android-setup
