--- a/posts/blog/nextjs-light-dark-mode.mdx
+++ b/posts/blog/nextjs-light-dark-mode.mdx
@@ -6,6 +6,11 @@ thumbnailUrl: /posts/thumbnail/nextjs-light-dark-mode.jpg
 tags: ['next.js', '정적 블로그', 'nextjs-light-dark-mode']
 ---
 
+> 23년 12월 기준 Next가 `App Router`로 변경되면서, 이 글은 deprecated되었습니다.  
+> 제 블로그는 `Next App Router`로 업데이트되었습니다. [코드 보러가기](https://github.com/MiryangJung/miryang.dev)
+
+---
+
 ## ⚫️ 내 블로그에 Light Black 모드를 추가하자
 
 기존 블로그는 블랙 테마를 사용하고 있다.
