2023 회고 제목 변경

--- a/posts/blog/2023-review.mdx
+++ b/posts/blog/2023-review.mdx
@@ -1,5 +1,5 @@
 ---
-title: 2023년 흘려보내기, 프론트엔드 개발자의 회고
+title: 2023년 보내기, 프론트엔드 개발자의 회고
 date: 2023-12-29
 description: 2024년은 행복할까?
 thumbnailUrl: /posts/thumbnail/2023-review.jpg
