2023 회고 부제 변경

--- a/posts/blog/2023-review.mdx
+++ b/posts/blog/2023-review.mdx
@@ -1,7 +1,7 @@
 ---
 title: 2023년 보내기, 프론트엔드 개발자의 회고
 date: 2023-12-29
-description: 2024년은 행복할까?
+description: 2024년 행복하자
 thumbnailUrl: /posts/thumbnail/2023-review.jpg
 tags: ["2023 회고", "회고", "주니어개발자"]
 ---
