--- a/posts/blog/js-closure.mdx
+++ b/posts/blog/js-closure.mdx
@@ -1,5 +1,5 @@
 ---
-title: JavaScript 클로저(closure)에 대해 알아보기
+title: JavaScript 클로저(Closure)에 대해 알아보기
 date: 2024-01-27
 description: Basic is the Best!
 thumbnailUrl: /posts/thumbnail/js-closure.jpg
@@ -9,7 +9,7 @@ tags: ["frontend", "js", "closure"]
 > 공부 기록용으로 오개념이 있을 시 알려주시면 감사하겠습니다.
 
 [leetcode의 30-days-of-javascript](https://leetcode.com/studyplan/30-days-of-javascript)를 시작했습니다.  
-Day2의 **Counter**가 `클로저(closure)`를 사용하는 문제라서 이참에 다시 클로저에 대해 공부해 봅니다.
+Day2의 **Counter**가 `클로저(Closure)`를 사용하는 문제라서 이참에 다시 클로저에 대해 공부해 봅니다.
 
 ---
 
