--- a/posts/blog/search-design-system.mdx
+++ b/posts/blog/search-design-system.mdx
@@ -68,6 +68,8 @@ UI 라이브러리를 레고 블록이라고 한다면, `디자인시스템` 은
 - 예시. ❌ color-danger => danger하지 않은 상황에서도 의미를 가짐
 - 예시. 🅾️ color-red-100 => 색상 정보만 가짐
 
+하지만 밑에 디자인시스템을 분석하면서, 의사결정을 명확히 정립한다면 용도와 의미를 부여한 토큰으로 잘 사용한다는 점을 알 수 있습니다.
+
 ▶️ **문서화 하기**
 
 - 디자인 가이드, 컴포넌트 문서, 사용 방법 가이드 등 작성
@@ -196,7 +198,7 @@ Atlassian의 디자인시스템을 알아보겠습니다.
 ### 컬러 시스템
 
 Lime100, Green600 등으로 정의된 컬레 팔레트가 존재합니다.  
-하지만 색상 값이 아닌 **색상, 글꼴 스타일, 공백 단위 또는 특정 요구에 맞게 설계된 디자인 토큰**을 사용합니다.
+하지만 색상 값이 아닌 **특정 요구에 맞게 설계된 디자인 토큰**을 사용합니다.
 
 색상값에 맞는 디자인토큰을 사용하는 것이 아니라 **의미와 용도에 따라** 사용하는 것이 규칙입니다.  
 `color.icon.information`과 `color.icon.brand`는 같은 색상이지만 사용처의 의미에 맞는 토큰값을 선택해야합니다.
