--- a/posts/blog/search-design-system.mdx
+++ b/posts/blog/search-design-system.mdx
@@ -68,7 +68,7 @@ UI 라이브러리를 레고 블록이라고 한다면, `디자인시스템` 은
 - 예시. ❌ color-danger => danger하지 않은 상황에서도 의미를 가짐
 - 예시. 🅾️ color-red-100 => 색상 정보만 가짐
 
-하지만 밑에 디자인시스템을 분석하면서, 의사결정을 명확히 정립한다면 용도와 의미를 부여한 토큰으로 잘 사용한다는 점을 알 수 있습니다.
+하지만 UI라이브러리가 아니라 디자인시스템지침이므로 의사결정을 명확히 정립해 용도와 의미를 부여한 토큰을 사용하는 곳도 많았습니다.
 
 ▶️ **문서화 하기**
 
