--- a/posts/blog/search-design-system.mdx
+++ b/posts/blog/search-design-system.mdx
@@ -62,13 +62,17 @@ UI 라이브러리를 레고 블록이라고 한다면, `디자인시스템` 은
 
 - 디자이너, 기획자와의 소통 자주하기
 
-▶️**중요도와 의미를 부여하지 않기**
+▶️**중요도와 의미를 분리하기**
 
 - 컬러 토큰 등에 중요도와 의미를 부여하지 않고, 상황에 따라 유연하게 사용할 수 있도록하기
 - 예시. ❌ color-danger => danger하지 않은 상황에서도 의미를 가짐
 - 예시. 🅾️ color-red-100 => 색상 정보만 가짐
 
-하지만 UI라이브러리가 아니라 디자인시스템지침이므로 의사결정을 명확히 정립해 용도와 의미를 부여한 토큰을 사용하는 곳도 많았습니다.
+하지만 UI라이브러리가 아니라 디자인시스템지침이므로 의사결정을 명확히 정립해 용도와 의미를 부여한 디자인토큰을 사용합니다.
+
+- 용도와 의미에 따른 디자인토큰을 생성
+- 예시. 컬러 토큰 `color-red-100` === 디자인토큰 `color-button-danger`
+- 예시. Danger Button의 색상 변경이 필요하면 디자인토큰에 매핑되는 컬러 토큰값을 변경해주기
 
 ▶️ **문서화 하기**
 
