--- a/posts/blog/search-design-system.mdx
+++ b/posts/blog/search-design-system.mdx
@@ -117,8 +117,7 @@ Vercel의 `Geist` 디자인시스템을 알아보겠습니다.
 - **prefix & suffix**: 앞뒤에 컴포넌트 위치
 - **loading, disabled, shadow**: 특정 스타일
 
-`color` props를 보여주고 있진 않은데요.  
-내부적으론 존재하는 지, 약속된 `type`의 버튼 스타일만 사용하는 것인지 궁금하네요.
+약속된 `type`의 스타일 버튼만 사용하는지 변경을 하면서 사용하는지는 나와있지 않지않아 궁금하네요.
 
 ```tsx
 <Button
@@ -186,8 +185,19 @@ Vercel의 `Geist` 디자인시스템을 알아보겠습니다.
 <Text size={{ sm: 24, md: 32, lg: 48 }} as="p" truncate={2}>The Evil Rabbit jumps.</Text>
 ```
 
-variant를 다양하게 정의해둔 부분들과 변형 가능한 props들이 약속된 디자인 규칙을 따르면서 확장성을 고려한 디자인 시스템이라고 느껴집니다.
-실제로 따라지기만 한다면 피그마에서 컴포넌트로 변환하는 작업도 수월하게 진행될 수 있는 시스템이라고 생각이 듭니다.
+variant를 다양하게 정의해둔 부분들과 변형 가능한 props들이 약속된 디자인 규칙을 따르면서 확장성을 고려한 디자인 시스템이라고 생각됩니다.  
+디자인토큰을 정의하고 있지 않지만 variant를 사용해 비슷한 효과를 만들고 있는 점도 흥미롭습니다.
+
+### 추가로...
+
+회사에서 `Badge` 컴포넌트를 Geist와 비슷하게 따라해 보다가 궁금한 점이 생겼었습니다.
+
+Geist의 Badge컴포넌트의 variants 정의를 보면 **배경 color와 글자 color가 있는 형식의 디자인**에 `subtle`이라는 단어를 붙입니다.  
+처음 보는 단어이기도 하고 궁금해서 다른 레퍼런스를 찾아보니 G마켓 디자인시스템도 똑같이 `subtle`이라는 단어를 사용하더군요.
+
+![](/posts/search-design-system/geist-badge.png)
+
+회사 개발 채널에도 물어보니 *덜 강조하는 색상*에 사용하는 것을 보았다고 하셔서! 이렇게 또 하나 배웠습니다.
 
 ---
 
