mdn 기여 문서 내용 추가

--- a/posts/blog/how-to-contribute-to-mdn.mdx
+++ b/posts/blog/how-to-contribute-to-mdn.mdx
@@ -92,6 +92,8 @@ MDN 번역 기여의 방향은 크게 두 가지가 있어요.
 - 원본 문서는 `content` 폴더 아래에 있어요.
 - 번역 문서는 `translated-content` 폴더 아래에 있어요.
 
+❗️ 작업 전에 [translated-content/pulls](https://github.com/mdn/translated-content/pulls)에서 이미 누가 작업 중인 문서가 아닌지 확인이 필요해요.
+
 ![](/posts/how-to-contribute-to-mdn/file.png)
 
 ### 한글 번역 안내서를 숙지해요.
@@ -115,6 +117,8 @@ MDN 한국 번역 팀에서는 [일반 안내서](https://github.com/mdn/transla
 기존 문서였다면 원본 문서와 비교하면서 번역 및 최신화 작업을 진행하고, 없는 문서였다면 신규 번역 작업을 진행해요.
 
 작업하다가 헷갈리는 부분이 있다면 [MDN Discord #korean 채널](https://discord.com/channels/1009925603572600863/1070064829466939503)에서 커뮤니티의 도움을 받을 수 있어요.
+
+작업을 하는 중에 문서가 깨지진 않는지 `http://localhost:5042/ko/{path}` 로컬 서버에서 확인 가능해요.
 
 ## 🟧 PR 제출하기
 
