--- a/posts/blog/how-to-contribute-to-mdn.mdx
+++ b/posts/blog/how-to-contribute-to-mdn.mdx
@@ -2,7 +2,7 @@
 title: 오픈소스 MDN Web Docs에 기여하는 방법
 date: 2024-07-01
 description: 오픈소스 기여는 처음인 분들을 위한 글
-thumbnailUrl: /posts/thumbnail/how-to-contribute-to-mdn.png
+thumbnailUrl: /posts/thumbnail/how-to-contribute-to-mdn.jpg
 tags: ["frontend", "opensource", "mdn"]
 ---
 
