post supabase kakao sdk

--- a/posts/blog/contribute-opensource-supabase.mdx
+++ b/posts/blog/contribute-opensource-supabase.mdx
@@ -1,5 +1,5 @@
 ---
-title: 오픈소스 Supabase에 이것저것 기여하기 (w/오픈소스멘토링3기)
+title: 오픈소스 Supabase에 이것저것 기여하기
 date: 2024-03-18
 description: 코드 기여는 처음이라
 thumbnailUrl: /posts/thumbnail/contribute-opensource-supabase.jpg
