iOS 확인 후 내용 수정

--- a/posts/blog/how-to-use-kakao-login-js-sdk-with-supabase.mdx
+++ b/posts/blog/how-to-use-kakao-login-js-sdk-with-supabase.mdx
@@ -185,9 +185,9 @@ AndroidManifest.xml에 카카오톡의 패키지명을 명시해 카카오톡을
 </queries>
 ```
 
-> iOS의 경우 테스트 기기가 없어 확인이 필요합니다. 추후 추가 예정입니다.
-
 모든 설정이 끝나면 앱에서도 카카오 앱을 통한 로그인이 가능해 지고, 유저에게 더 좋은 경험을 선사할 수 있습니다.
+
+- iOS의 경우 추가 설정없이 잘 작동하는 것을 확인했으나 저는 코드베이스에 이미 이것 저것 세팅이 되어있는 상태이긴 하니 참고하세요.
 
 ## 끝!
 
