--- a/posts/blog/contribute-opensource-supabase.mdx
+++ b/posts/blog/contribute-opensource-supabase.mdx
@@ -64,7 +64,7 @@ PR을 제출하고, 링크 건 관련 이슈에서 메인테이너가 **"@Miryan
 
 ## 3. Kakao OIDC 문서를 추가하다
 
-> Open: [docs: Add Using Kakao Login JS SDK](https://github.com/supabase/supabase/pull/21906)
+> Merged: [docs: Add Using Kakao Login JS SDK](https://github.com/supabase/supabase/pull/21906)
 
 카카오 OIDC를 추가한 PR에서 메인테이너의 **관련 문서도 추가해 달라는 요청**이 있어 추가했습니다.
 
