Update blog post title for clarity; improve phrasing to enhance user understanding and engagement in flat-form.mdx

--- a/posts/blog/flat-form.mdx
+++ b/posts/blog/flat-form.mdx
@@ -1,5 +1,5 @@
 ---
-title: 폼 항목을 단순하게 펼쳐보면 어떨까요?
+title: 폼을 단순하게 펼쳐보면 어떨까요?
 date: 2024-09-09
 description: 단순함으로, 클릭 줄이고 직관 높이기
 thumbnailUrl: /posts/thumbnail/flat-form.jpg
