Correct phrasing in flat-form.mdx to clarify focus on improving UX for single-page forms over multi-step forms

--- a/posts/blog/flat-form.mdx
+++ b/posts/blog/flat-form.mdx
@@ -5,7 +5,7 @@ description: 단순함으로, 클릭 줄이고 직관 높이기
 thumbnailUrl: /posts/thumbnail/flat-form.jpg
 ---
 
-저는 **최근 상품 등록 및 주문 프로세스의 사용자 경험(UX)을 개선**하는 것에 대해 제안하고, 팀과 함께 아이디어를 같이 개발 및 개선을 했습니다.
+저는 **최근 상품 등록 및 주문 폼의 사용자 경험(UX)을 개선**하는 것에 대해 제안하고, 팀과 함께 아이디어를 같이 개발 및 개선을 했습니다.
 
 업계의 트렌드(?)인 멀티스텝 폼에서 단일 페이지 폼으로 왜 변경했는지에 대해서 얘기해 보려 합니다.
 
