--- a/posts/blog/from-poor-english-to-international-speaker.mdx
+++ b/posts/blog/from-poor-english-to-international-speaker.mdx
@@ -25,7 +25,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
 
 ### 1. 영어 학습 앱 (듀오링고, 말해보카, 플랭)
 
-> 결과: **실패**
+> 결과: 실패
 
 가장 먼저 시도한 것은 영어 학습 앱이었습니다.  
 듀오링고, 말해보카, 플랭 같은 유명 앱을 설치하고 의욕적으로 시작했습니다.
@@ -38,7 +38,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
 
 ### 2. 소규모 성인영어학원 (대전 나밍글학원)
 
-> 결과: **만족**
+> 결과: ⭐️만족⭐️
 
 오프라인에서 금전적 투입이 동반될 수 있는 방법을 찾다가 대전에 있는 소규모 성인영어회화학원 [나밍글학원](https://namingle.co.kr/)에 등록하게 되었습니다.  
 이 곳에서의 경험이 저의 영어 학습에 대한 재미를 붙이게 했습니다.
@@ -54,7 +54,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
 
 ### 3. 대규모 성인영어학원 (천안)
 
-> 결과: **실패**
+> 결과: 실패
 
 천안으로 이사 후, 대규모 성인영어회화학원에 등록했습니다.  
 가격이 합리적이기도 했고, 수업을 자주 들을 수 있는 메리트가 있었습니다.
@@ -69,21 +69,23 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
 
 ### 4. 화상영어 (필리핀 티쳐)
 
-> 결과: **실패**
+> 결과: 실패
 
 이직과 함께 오프라인 학원을 다닐 시간이 없어져서 전화/화상영어를 시작해볼까 했습니다.  
 출퇴근 시간이나 점심시간을 활용해서 해보려고 했어요.
 
-무료 레벨테스트를 받아 보았는데 화질과 음질이 깨끗하지 않은 점도 힘들었고, 무엇보다 물리적으로 떨어져 있는 상황에서 대화를 끊기지 않고 하려다보니 결국 내가 할 수 있는 가장 안전하고 익숙한 단어와 문장만 반복하게 되더라구요.
+무료 레벨테스트를 받아 보았는데 화질과 음질이 깨끗하지 않은 점도 힘들었고, 무엇보다 물리적으로 떨어져 있는 상황에서 대화를 끊기지 않고 하려다보니 결국 익숙한 단어와 문장만 반복하게 되더라구요.
 
 저는 할 수 있는 단어와 문장이 한정적인 사람이라 편한 표현만 계속 사용하게 되는 악순환이 반복될 거 같아서 등록하진 않았습니다.
 
 ### 5. 온라인 스터디 (유튜브 영쌤 스터디)
 
-> 결과: **만족**
+> 결과: ⭐️만족⭐️
 
 어떤 것을 해야하나 고민하던 차에 유튜브 알고리즘에 이끌려 영어 [유튜버 영쌤의 스터디](https://www.youngenglish.co.kr/signup)를 보게 됩니다.  
 온라인이고 퇴근 후에 할 수 있는 시간대도 있어서 시도해 보게 되었습니다.
+
+**가격은** 3주(주 2회) 18만원 정도였습니다.
 
 온라인 스터디는 처음이여서 비교는 할 수 없지만 퀄리티가 좋았고, 만족도도 높았어요.
 
@@ -96,7 +98,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
 
 ### 6. 1:1 비즈니스 영어학원 (랭귀지큐브)
 
-> 결과: **만족**
+> 결과: ⭐️만족⭐️
 
 FOSSASIA 발표자로 선정된 직후, 발등에 불이 떨어져 단기간에 최대 효율을 내기 위해 1:1 비즈니스 영어 학원을 선택했습니다.
 회사 점심시간을 활용해 수업을 들었고, **한국인 강사 25분 + 원어민 강사 25분** 형태였습니다.
