--- a/posts/blog/from-poor-english-to-international-speaker.mdx
+++ b/posts/blog/from-poor-english-to-international-speaker.mdx
@@ -1,5 +1,5 @@
 ---
-title: 영어 못하는 개발자가 해외 발표까지 간 2년의 기록
+title: 영어 못하는 개발자가 해외 발표까지 간 2년의 영어 공부 기록
 date: 2025-09-09
 description: 6가지 영어 학습법을 시도한 개발자의 후기
 thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
