썸네일 용량 축소

--- a/posts/blog/from-poor-english-to-international-speaker.mdx
+++ b/posts/blog/from-poor-english-to-international-speaker.mdx
@@ -2,7 +2,7 @@
 title: 영어 못하는 개발자가 해외 발표까지 간 2년의 영어 공부 기록
 date: 2025-09-09
 description: 6가지 영어 학습법을 시도한 개발자의 후기
-thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpg
+thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 ---
 
 2년 전 저의 영어 실력을 한 마디로 정리하면 이렇습니다.  
@@ -126,7 +126,7 @@ FOSSASIA 발표자로 선정된 직후, 발등에 불이 떨어져 단기간에 
 
 > 더 자세한 [발표 후기](https://www.linkedin.com/posts/miryangjung_fossasia-fossasia2025-activity-7306997970934108160-N-jf?utm_source=share&utm_medium=member_desktop&rcm=ACoAACwtADsBMOji1gosFeEzi3Lvsphwc9I1NjA)
 
-![fossasia](/posts/thumbnail/from-poor-english-to-international-speaker.jpg)
+![fossasia](/posts/thumbnail/from-poor-english-to-international-speaker.jpeg)
 
 ---
 
