내용에 이모지 추가

--- a/posts/blog/from-poor-english-to-international-speaker.mdx
+++ b/posts/blog/from-poor-english-to-international-speaker.mdx
@@ -30,7 +30,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 가장 먼저 시도한 것은 영어 학습 앱이었습니다.  
 듀오링고, 말해보카, 플랭 같은 유명 앱을 설치하고 의욕적으로 시작했습니다.
 
-**가격은** 플랫폼마다 다르지만 무료 ~ 2만원(1개월) 정도였습니다.
+💸 **가격은** 플랫폼마다 다르지만 무료 ~ 2만원(1개월) 정도였습니다.
 
 실패한 이유는 간단합니다.  
 저는 의지가 약한 사람입니다. **자발적으로 해야 하는 학습을 지속적으로** 하기 어려웠습니다.  
@@ -43,7 +43,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 오프라인에서 금전적 투입이 동반될 수 있는 방법을 찾다가 대전에 있는 소규모 성인영어회화학원 [나밍글학원](https://namingle.co.kr/)에 등록하게 되었습니다.  
 이 곳에서의 경험이 저의 영어 학습에 대한 재미를 붙이게 했습니다.
 
-**가격은** 1개월(주1회) 15만원 정도였습니다.
+💸 **가격은** 1개월(주1회) 15만원 정도였습니다.
 
 제가 만족하는 이유는
 - **높은 수업 퀄리티:** 강사님의 역량이 뛰어나셔서 회화 스킬과 문법적 정확성을 동시에 잡을 수 있었습니다.
@@ -59,7 +59,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 천안으로 이사 후, 대규모 성인영어회화학원에 등록했습니다.  
 가격이 합리적이기도 했고, 수업을 자주 들을 수 있는 메리트가 있었습니다.
 
-**가격은** 1개월(주4회) 14만원 정도였습니다.
+💸 **가격은** 1개월(주4회) 14만원 정도였습니다.
 
 실패라고 생각하는 이유는
 - **암기 위주의 수업:** 정해진 문장들을 외우는 방식이라 재미를 붙이기 어려웠습니다.
@@ -85,7 +85,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 어떤 것을 해야하나 고민하던 차에 유튜브 알고리즘에 이끌려 영어 [유튜버 영쌤의 스터디](https://www.youngenglish.co.kr/signup)를 보게 됩니다.  
 온라인이고 퇴근 후에 할 수 있는 시간대도 있어서 시도해 보게 되었습니다.
 
-**가격은** 3주(주 2회) 18만원 정도였습니다.
+💸 **가격은** 3주(주 2회) 18만원 정도였습니다.
 
 온라인 스터디는 처음이여서 비교는 할 수 없지만 퀄리티가 좋았고, 만족도도 높았어요.
 
@@ -103,7 +103,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 FOSSASIA 발표자로 선정된 직후, 발등에 불이 떨어져 단기간에 최대 효율을 내기 위해 1:1 비즈니스 영어 학원을 선택했습니다.
 회사 점심시간을 활용해 수업을 들었고, **한국인 강사 25분 + 원어민 강사 25분** 형태였습니다.
 
-**가격은** 1회(50분) 6-7만 원 정도였습니다.
+💸 **가격은** 1회(50분) 6-7만 원 정도였습니다.
 
 - **정확한 문장 교정:** 저의 가장 큰 문제였던 **단어 나열식 부서진 영어 문장**을 집중적으로 교정했습니다. 주어, 동사, 시제를 갖춘 완전한 문장을 만드는 훈련을 반복할 수 있었습니다.
 - **최고 수준의 강사진:** 발음부터 문법, 비즈니스 매너까지 세심하게 지도받을 수 있었습니다.
@@ -143,7 +143,7 @@ FOSSASIA 발표자로 선정된 직후, 발등에 불이 떨어져 단기간에 
 그 목표 하나로 3달 동안 점심시간을 쪼개 1:1 영어 학원을 다녔고, 컨퍼런스 현장에서 좋은 분들을 만나 격려를 받으며 시야를 넓힐 수 있었습니다.
 
 최근 이 경험이 가져온 나비효과를 실감하고 있습니다.  
-과거에 울며 겨자 먹기로 Supabase에 기여했던 작은 기능이 생각보다 알려지게 되어, 얼마 전 Supabase 행사에서 영어 발표 제안을 받았습니다.  
+과거에 울며 겨자 먹기로 Supabase에 기여했던 작은 기능이 생각보다 알려지게 되어, 얼마 전 [Supabase 행사에서 영어 발표](https://www.linkedin.com/posts/miryangjung_supabase-launch-week15-%EB%B0%9C%ED%91%9C-%EC%9E%91%EB%85%84%EC%97%90-supabase-activity-7359526177964769280-eAOq?utm_source=share&utm_medium=member_desktop&rcm=ACoAACwtADsBMOji1gosFeEzi3Lvsphwc9I1NjA)를 제안받고 하게되었습니다.  
 
 만약 FOSSASIA에서 영어 발표라는 첫 번째 허들을 넘어보지 못했다면, 저는 분명 영어가 부담스러워 이 제안을 거절했을 것입니다.
 
