--- a/posts/blog/from-poor-english-to-international-speaker.mdx
+++ b/posts/blog/from-poor-english-to-international-speaker.mdx
@@ -5,7 +5,7 @@ description: 6가지 영어 학습법을 시도한 개발자의 후기
 thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 ---
 
-2년 전 저의 영어 실력을 한 마디로 정리하면 이렇습니다.  
+2년 전 저의 영어 실력은 이렇습니다.  
 미드를 많이 봐서 듣기는 꽤 되는 편이었지만, 말하기는 몇 개의 단어를 나열해서 내 의사를 표현할 수 있는 수준이었습니다.  
 학창 시절에도 영어를 잘하는 편은 아니였고, 유학 등의 해외 경험도 없었습니다.
 
@@ -18,7 +18,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 물론 이 글로 제가 영어를 정복했다는 말씀을 드리려는 건 아닙니다.  
 지금 제 실력은 중급 정도라고 생각하고, 유창하지 않습니다.
 
-완벽하게 잘해지는 것만이 아니라, 이렇게 성장하는 '중간 과정'을 공유하는 것도 누군가에게는 도움이 될 거라 생각했습니다.  
+완벽하게 잘해지는 것만이 아니라, 이렇게 성장하는 '중간 과정'을 공유하는 것도 누군가에게는 도움이 될 거라 생각합니다.  
 이 글이 저처럼 영어 초급에서 중급으로 나아가고픈 분들께 현실적인 로드맵이 되기를 바랍니다.
 
 ---
@@ -30,7 +30,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 가장 먼저 시도한 것은 영어 학습 앱이었습니다.  
 듀오링고, 말해보카, 플랭 같은 유명 앱을 설치하고 의욕적으로 시작했습니다.
 
-💸 **가격은** 플랫폼마다 다르지만 무료 ~ 2만원(1개월) 정도였습니다.
+💸 **가격은** 플랫폼마다 다르지만 1개월에 2만원 이내였습니다.
 
 실패한 이유는 간단합니다.  
 저는 의지가 약한 사람입니다. **자발적으로 해야 하는 학습을 지속적으로** 하기 어려웠습니다.  
@@ -67,7 +67,7 @@ thumbnailUrl: /posts/thumbnail/from-poor-english-to-international-speaker.jpeg
 
 이직으로 시간 여유가 줄어든 것도 이유였지만, 근본적으로는 가격보다 피드백의 질이 보장되는 학습 환경이 더 필요하다는 생각이 들어 그만두었습니다.
 
-### 4. 화상영어 (필리핀 티쳐)
+### 4. 화상영어 (필리핀 티쳐 업체)
 
 > 결과: 실패
 
