--- a/posts/blog/from-poor-english-to-international-speaker.mdx
+++ b/posts/blog/from-poor-english-to-international-speaker.mdx
@@ -143,7 +143,7 @@ FOSSASIA 발표자로 선정된 직후, 발등에 불이 떨어져 단기간에 
 그 목표 하나로 3달 동안 점심시간을 쪼개 1:1 영어 학원을 다녔고, 컨퍼런스 현장에서 좋은 분들을 만나 격려를 받으며 시야를 넓힐 수 있었습니다.
 
 최근 이 경험이 가져온 나비효과를 실감하고 있습니다.  
-과거에 울며 겨자 먹기로 Supabase에 기여했던 작은 기능이 생각보다 알려지게 되어, 얼마 전 [Supabase 행사에서 영어 발표](https://www.linkedin.com/posts/miryangjung_supabase-launch-week15-%EB%B0%9C%ED%91%9C-%EC%9E%91%EB%85%84%EC%97%90-supabase-activity-7359526177964769280-eAOq?utm_source=share&utm_medium=member_desktop&rcm=ACoAACwtADsBMOji1gosFeEzi3Lvsphwc9I1NjA)를 제안받고 하게되었습니다.  
+Supabase에 기여했던 기능이 생각보다 알려지게 되어, 얼마 전 [Supabase 행사에서 영어 발표](https://www.linkedin.com/posts/miryangjung_supabase-launch-week15-%EB%B0%9C%ED%91%9C-%EC%9E%91%EB%85%84%EC%97%90-supabase-activity-7359526177964769280-eAOq?utm_source=share&utm_medium=member_desktop&rcm=ACoAACwtADsBMOji1gosFeEzi3Lvsphwc9I1NjA)를 제안받고 하게되었습니다.  
 
 만약 FOSSASIA에서 영어 발표라는 첫 번째 허들을 넘어보지 못했다면, 저는 분명 영어가 부담스러워 이 제안을 거절했을 것입니다.
 
